[package]
name = "xuanmi_base_support"
version = "0.1.0"
edition = "2021"

[dependencies.anyhow]
version = "1"
features = ["backtrace", "std"]

[dependencies.rand]
version = "0.8"

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["rustls", "json", "blocking"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.serde_json]
version = "1"

[dependencies.shellexpand]
version = "3.1"

[dependencies.uuid]
version = "1.3"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]